@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.3.0
 
-15 March 2017
+16 March 2017
 
 
 1. Introduction
@@ -64,7 +64,8 @@ None
 
 8. Model module
 ---------------
-None
+The GModelSpectralNodes class now throws an exception if the energy or
+intensity of a node is set to a non-positive value (#990).
 
 
 9. Numerics module
